// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preprocessor > interpolation 1`] = `
"<script>
import { languageTag as paraglide_adapter_sveltekit_language_tag } from 'paraglide-adapter-sveltekit:outdir:/runtime.js';

    let name = \\"Loris\\";
</script>
<a href={translatePath(\`/hello-\${name}\`, paraglide_adapter_sveltekit_language_tag())}>Hello {name}</a>"
`;

exports[`preprocessor > mutliple hrefs 1`] = `
"<script>
import { languageTag as paraglide_adapter_sveltekit_language_tag } from 'paraglide-adapter-sveltekit:outdir:/runtime.js';
</script>
<h1>
	<a href={translatePath(\`https://inlang.com\`, paraglide_adapter_sveltekit_language_tag())}>inlang</a>
	<a href={translatePath(\`https://inlang.com\`, paraglide_adapter_sveltekit_language_tag())}>inlang</a>
	<a href={translatePath(\`https://inlang.com\`, paraglide_adapter_sveltekit_language_tag())}>inlang</a>
</h1>
"
`;

exports[`preprocessor > text href quoted 1`] = `
"<script>
import { languageTag as paraglide_adapter_sveltekit_language_tag } from 'paraglide-adapter-sveltekit:outdir:/runtime.js';
</script>
<a href={translatePath(\`/about\`, paraglide_adapter_sveltekit_language_tag())}>About</a>"
`;

exports[`preprocessor > text href unquoted 1`] = `
"<script>
import { languageTag as paraglide_adapter_sveltekit_language_tag } from 'paraglide-adapter-sveltekit:outdir:/runtime.js';
</script>
<a href={translatePath(\`/about\`, paraglide_adapter_sveltekit_language_tag())}>About</a>"
`;
